--- a/service.html
+++ b/service.html
@@ -216,7 +216,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   	   <div class="banner-wrap">
 				   	 	   <ul class="grid-1">
 				   	 			<li class="grid-1_left">
-				   	 				<img src="images/s3.jpg" class="img-responsive" alt=""/>
+				   	 				<img src="images/freestock/people1.jpg" class="img-responsive" alt="" width="150px" />
 				   	 			</li>
 				   	 			<li class="grid-1_right">
 				   	 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown printer took a galley of type and scrambled it to make. a type specimen book. It has survived not only five centuries. but also the leap into electronic typesetting, remaining essentially unchanged</p>
@@ -230,7 +230,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   	   <div class="banner-wrap">
 				   	 	   <ul class="grid-1">
 				   	 			<li class="grid-1_left">
-				   	 				<img src="images/s4.jpg" class="img-responsive" alt=""/>
+				   	 				<img src="images/freestock/people2.jpg" class="img-responsive" alt="" width="150px" />
 				   	 			</li>
 				   	 			<li class="grid-1_right">
 				   	 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown printer took a galley of type and scrambled it to make. a type specimen book. It has survived not only five centuries. but also the leap into electronic typesetting, remaining essentially unchanged</p>
@@ -244,7 +244,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   	   <div class="banner-wrap">
 				   	 	   <ul class="grid-1">
 				   	 			<li class="grid-1_left">
-				   	 				<img src="images/s2.jpg" class="img-responsive" alt=""/>
+				   	 				<img src="images/freestock/people3.jpg" class="img-responsive" alt="" width="150px" />
 				   	 			</li>
 				   	 			<li class="grid-1_right">
 				   	 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown printer took a galley of type and scrambled it to make. a type specimen book. It has survived not only five centuries. but also the leap into electronic typesetting, remaining essentially unchanged</p>
