--- a/store.html
+++ b/store.html
@@ -102,18 +102,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <p class="tzweight_Bold"><span class="m_1">Hosting<br></span>3 Column</p>
         </h4>
 		<div class="col-md-4">
-							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>11<br><span class="month">Per Month</span></h3>
-								<ul>
-									<li><span>Next Gen Host</span></li>
-									<li><a href="#">10GB Disk Space</a></li>
-									<li><a href="#">1TB Bandwidth</a></li>
-									<li><a href="#">Free DDoS Protection</a></li>
-									<li><a href="#">Free Daily Backups</a></li>
-									<li><a href="#">Managed Hosting</a></li>
-								</ul>
-								<a class="popup-with-zoom-anim order-btn" href="#small-dialog">Sign Up</a>
-							</div>
+						                <div class="pricing-table-grid">
+						                    <h3><span class="dollar">Rp </span>100<span class="dollar">rb</span> <br><span class="month">Per Bulan</span></h3>
+						                    <ul>
+						                        <li><span>Advanced Plan</span></li>
+						                        <li><a href="#">1 GB Storage</a></li>
+						                        <li><a href="#">Indonesia Data Center</a></li>
+						                        <li><a href="#">256 MB Virtual Memory</a></li>
+						                        <li><a href="#">Single Core CPU</a></li>
+						                        <li><a href="#">Unlimited Bandwidth</a></li>
+						                    </ul>
+						                    <a class="popup-with-zoom-anim order-btn" href="#small-dialog">Order</a>
+						                </div>
 							<div id="small-dialog" class="mfp-hide">
 									<div class="pop_up">
 									 	<div class="payment-online-form-left">
@@ -171,34 +171,35 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						  			</div>
 								</div>
 		     </div>
+             
              <div class="col-md-4">
-							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>12<br><span class="month">Per Month</span></h3>
-								<ul>
-									<li><span>Resellers Hosting</span></li>
-									<li><a href="#">10GB Disk Space</a></li>
-									<li><a href="#">1TB Bandwidth</a></li>
-									<li><a href="#">Free DDoS Protection</a></li>
-									<li><a href="#">Free Daily Backups</a></li>
-									<li><a href="#">Managed Hosting</a></li>
-								</ul>
-								<a class="popup-with-zoom-anim order-btn" href="#small-dialog">Sign Up</a>
-							</div>
-		     </div>	
-	         <div class="col-md-4">
-							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>10<br><span class="month">Per Month</span></h3>
-								<ul>
-									<li><span>Grid Web Hosting</span></li>
-									<li><a href="#">10GB Disk Space</a></li>
-									<li><a href="#">1TB Bandwidth</a></li>
-									<li><a href="#">Free DDoS Protection</a></li>
-									<li><a href="#">Free Daily Backups</a></li>
-									<li><a href="#">Managed Hosting</a></li>
-								</ul>
-								<a class="popup-with-zoom-anim order-btn" href="#small-dialog">Sign Up</a>
-							</div>
-		    </div>
+                <div class="pricing-table-grid">
+                    <h3><span class="dollar">Rp </span>400<span class="dollar">rb</span> <br><span class="month">Per Bulan</span></h3>
+                    <ul>
+                        <li><span>Business Plan</span></li>
+                        <li><a href="#">60 GB Storage</a></li>
+                        <li><a href="#">Free cPanel/WHM</a></li>
+                        <li><a href="#">1024 MB Virtual Memory</a></li>
+                        <li><a href="#">Single Core CPU</a></li>
+                        <li><a href="#">Unlimited Bandwidth</a></li>
+                    </ul>
+                    <a class="popup-with-zoom-anim order-btn" href="#small-dialog">Order</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="pricing-table-grid">
+                    <h3><span class="dollar">Rp </span>1000<span class="dollar">rb</span> <br><span class="month">Per Bulan</span></h3>
+                    <ul>
+                        <li><span>Gold Plan</span></li>
+                        <li><a href="#">SATA 2x1 TB Storage</a></li>
+                        <li><a href="#">Indonesia Data Center</a></li>
+                        <li><a href="#">DDR3 16GB Virtual Memory</a></li>
+                        <li><a href="#">3.3 GHZ CPU</a></li>
+                        <li><a href="#">Unlimited Bandwidth</a></li>
+                    </ul>
+                    <a class="popup-with-zoom-anim order-btn" href="#small-dialog">Order</a>
+                </div>
+            </div>	
 		    <div class="clearfix"> </div>
 	</div>
 </div>
