--- a/index.html
+++ b/index.html
@@ -99,21 +99,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                <div class="flexslider">
                     <ul class="slides">
                         <li>
-                            <img src="images/serv" class="img-responsive" alt=""/>
+                            <img src="images/freestock/hero-1.jpg" class="" alt=""/>
                         </li>
                         <li>
-                            <img src="images/server.png" class="img-responsive" alt=""/>
-                            <div class="banner_desc">
-                                <h1>Awesome Hosting</h1>
-                                <h2>with unlimited features</h2>
-                            </div>
+                        <img src="images/freestock/hero-2.jpg" class="" alt=""/>
                         </li>
                         <li>
-                            <img src="images/server1.png" class="img-responsive" alt=""/>
-                            <div class="banner_desc">
-                                <h1>Awesome Hosting</h1>
-                                <h2>with unlimited features</h2>
-                            </div>
                         </li>
                     </ul>
                 </div>
